Fixed Spacing for Sponsors on Cover Sheet on Bigger screens

--- a/static/styles/news.sass
+++ b/static/styles/news.sass
@@ -11,7 +11,7 @@
     display: flex
     flex-flow: nowrap column
     #rwcl-spacer
-      width: 100%
+      width: 50%
       height: 50%
       display: flex
       #rwclogo
@@ -21,7 +21,8 @@
         background-size: cover
         margin: auto
     #sponsors
-      width: 100%
+      max-width: 35rem
+      width: 50%
       height: 50%
       display: flex
       flex-flow: wrap row
